--- a/index.html
+++ b/index.html
@@ -2,10 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
-<body>
-   <h1> hola mundo!</h1>
+<body align="center">
+    <div class="titulo">
+    Bienvenidos a <br>
+    Plataformas-Mobiles-Entregas.
+     <br></div>
+    <img src="momo.jpg" alt="."><br>
+     
+    <div class="subtitle"> hola </div>
+    <br>
+
+    <button type="disc">       tarea 1     </button>
+    <br>
+    <button type="disc">       tarea 1     </button>
+    <br>
+    <button type="disc">       tarea 1     </button>
+    <br>
+    <button type="disc">       tarea 1     </button>
+    <br>
+    <button type="disc">       tarea 1     </button>
+
 </body>
 </html>
